# property-pricing

./: .gitignore  README.md  data.csv  database.py  docker-compose.yml  listing_data.csv  listings.txt  main.py  models.py  predicted_data.csv  prediction.csv  regression.py  requirements.txt  scrape_data.py  test.csv  test.json
.github/workflows/: build.yml  deploy.yml
app/: Dockerfile  pyproject.toml  streamlit_app.py  utils.py
app/backend/: go.mod
app/queries/: get_cities.sql  get_regions.sql
app/streamlit_app/: __main__.py  streamlit_app.py
data/: sql_queries.py
data/scraper/: Makefile  fetch_listings_urls.py  go.mod  process_listings_urls.py  pyproject.toml  settings.py
data/scraper/cmd/scrapper/: main.go
data/scraper/helpers/: driver_thread.py
data/scraper/internal/fetch/: fetch-data.go  fetch-listings.go  fetchListings.go  fetcher.go
database/: init.sql
db/: schema.sql
db/lambda_service/: Dockerfile  service.py
db/migrations/: 0001_schema.sql  0002_triggers.sql  0003_indexes.sql  0004_roles.sql  0005_model_store.sql
infra/: bucket.tf  image_repository.tf  lambda.tf  main.tf  network.tf  output.tf  outputs.tf  rds.tf  redshift.tf  terraform.tfstate.backup  variables.tf  versions.tf
model/: Dockerfile  api.py  artifacts_handler.py  build_image.sh  database.py  handler.py  inference_handler.py  model.py  poetry.toml  pyproject.toml  serve.sh  train.ipynb  train.py  transform.py  utils.py
model/cfgs/: base_model.json
model/feature_repo_dev/: feature_store.yaml  property_features.py
model/feature_repo_dev/data/: registry.db
model/feature_repo_local/: property_features.py
model/feature_repo_prod/: feature_store.yaml
model/queries/: get_property_info.sql
model/scripts/: load_model.py
scraper/: go.mod
scraper/internal/fetch/: fetcher.go
scraper/internal/types/: listing.go  page-result.go
