[tool.poetry]
name = "models"
version = "0.1.0"
description = "Models for predicting property prices"
authors = ["Bruno Sienkiewicz <bruno.sienkiewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
