[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Bruno Sienkiewicz <bruno.sienkiewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
feast = {extras = ["redis"], version = "^0.40.1"}
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
psycopg = {extras = ["binary"], version = "^3.2.1"}
psycopg-pool = "^3.2.2"
psycopg2 = "^2.9.9"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
imblearn = "^0.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
