[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Bruno Sienkiewicz <bruno.sienkiewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
selenium = "^4.18.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
